<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SOCAR Vacancy</string>
    <string name="action_settings">Settings</string>
    <string name="username_textview">Username</string>
    <string name="password_textview">Password</string>
    <string name="username_textfield">admin</string>
    <string name="password_textfield">******</string>
    <string name="login_button">Log in</string>
    <string name="title_activity_login">SOCAR Vacancy</string>
    <string name="vacancy_title">Vacancies</string>
    <string name="logout">Logout</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_applicant_list">Applicants</string>
    <string name="title_activity_applicant_detail">Applicant Details</string>
    <string name="textview_applicant_name">Name</string>
    <string name="textview_applicant_surname">Surname</string>
    <string name="textview_applicant_faname">Faname</string>
    <string name="textview_applicant_email">Email</string>
    <string name="textview_applicant_sex">Sex</string>

</resources>
