<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameEditText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:text="@string/username_textview"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameTextView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/username_textfield" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameEditText"
        android:layout_below="@+id/usernameEditText"
        android:layout_marginTop="36dp"
        android:text="@string/password_textview"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTextView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password_textfield"
        android:inputType="textPassword" />

</RelativeLayout>
