<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/padding_3dp"
        android:text="@string/textview_applicant_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewName"
        android:padding="@dimen/padding_3dp"
        android:text="@string/textview_applicant_surname"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewFaname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewSurname"
        android:padding="@dimen/padding_3dp"
        android:text="@string/textview_applicant_faname"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewEmail"
        android:padding="@dimen/padding_3dp"
        android:text="@string/textview_applicant_sex"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewSex" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewFaname"
        android:padding="@dimen/padding_3dp"
        android:text="@string/textview_applicant_email"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/reasonListView"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/statusSpinner" >

    </ListView>

</RelativeLayout>